# Skillring

./: README.md  package-lock.json  package.json  pyproject.toml
Docs/: HenrysLecture.txt
pages/: App.js  _app.js  index.js  index.tsx
styles/: globals.css
supabase/: config.toml
